@@ -7,27 +7,25 @@ DIST fox-1.6.49.tar.gz 4383152 SHA256 3679ecd23064958259fbef5898aabb048d63b2dcb7
 DIST fox-1.7.44.tar.gz 5251615 SHA256 1fbead78847d2a2c6ae8a18a5317713f2ef36d4ebeddacf5d097b915e4728b4c SHA512 ba09a6a3bbf569beb1654070e93358a64ba8f81feac80927e4953fe8645722045ef6e95e64749c9f9783e56a482a9e6131fd16f4a5b386383643e2b0e3c56193 WHIRLPOOL 14e9ad3d04cdc712b8cf5cd0e52e4b6a208880159be476c97ca8a45c9f2280bebcef9b92dd17b130d1cb23743e465512c1d97ce3fe67999c589d51878e633bd7
 DIST fox-1.7.45.tar.gz 5254563 SHA256 78f2b5f609a52d21da08e693d45b8eeb9d4ceed52ad86e451ef4485f2375c829 SHA512 ec8acf0eb0b1882254f7df2abdcb87445992fc9fb8165afcc08b8dd52a718cb31953849efc7a530bd682e6265687bdf4dc9fb5c930557b9405235182894684b0 WHIRLPOOL 08808e67e0e31c7389b1d4ac097d7d707fb48a925df233021913bc80363002c0c4ce19c8630f4bd5c87ebb5bc5c010dc7f3260f415dfa5b60390c5aae316de78
 EBUILD fox-1.6.45.ebuild 1095 SHA256 9a4bb8046148608e3d2ac9b58cb21be5b5d3ca6f541b8d6a65a4201fe0cf9137 SHA512 ed9c450069293958a6caaab6133e1685014f69df59f17b0e60c75687466c5056bc16ee4917697220f8458ff22503e9949aeeaa89fee3af735f4b1da236687d2c WHIRLPOOL 5c536539e03d3dc39f180a1e712cdcee2fde1c0ee506911ff67d2291ce4a6d16595f70ab3f7e083bcd87e0f9922dc3ffcc06b3b9a770dcd9584f48cd1562b9f5
-EBUILD fox-1.6.49.ebuild 1096 SHA256 5f2dd0b556cc3017bfe3496a7c7b46432bfe847c029ba1590b5c73021f80a63b SHA512 b1bd9a86b3cc1dea29151068d7a193f892c14760c8329c49bf66bd1361e301b326b870862504fa054dd2cfb216f83d861ec01e951be0c053d603ec54bde656b3 WHIRLPOOL 7bb6f3e3f2d976946bc8548562f5e5b2df91ef04e004c372fecff460bc12f1c41773f65104c50dada29c41f37c90cf1e0889af96334309b0caac851bf6136b62
+EBUILD fox-1.6.49.ebuild 1095 SHA256 33e7cc8be12274127ab5b87d9ee2f10a05b1d21800ec24200a848f40efd7d90b SHA512 bb14b4b5dcafe1382ad2597379b5ef61923df79889812359d9de8a1aa5a9956ac0c7e7596e62af7481759da053dc1e5db0421448b5846bce8f317f8e258c90af WHIRLPOOL 0b59c3d0ac7292ad4519128f0980a9b3c958a8176045d7518c4dd3fe6a9ac63260b9cc2f730f6ce1d03663f6d7decc79e7a5fe2d8f811bf1edabb5a46ec32ad2
 EBUILD fox-1.7.44.ebuild 1390 SHA256 0e6de5c7490739ed20c5b150a95e002479575a26a8a6dc27467211aae592a6dd SHA512 5bf0e1795eeae7794b42c92a0dbf4788b70705ad42a39b08a319b7286abb32adb80fff0dde4c29e18dcf153c187d9b4f522687c1417571cbd76115269256a639 WHIRLPOOL 08ae82ab4a802730307c1d396bb979d60c8ead70d26ff13f2a3c11311fe3bbf6d778ff826a311e706513bb766e70697d6d0d62ddcd6561fcefb0b303d5f41d3c
 EBUILD fox-1.7.45.ebuild 1390 SHA256 886cef49bf8ace635108bec08164d564b0dcbdf3618350391090cbb918233924 SHA512 9562fad4424d5b3177979680c417c2075a129f14f16f94ddafd7f4e1e2d7d8e34c124a31a848d52b0621b07c800be635c04f91f860271777e9530e856b5e7708 WHIRLPOOL 79f5abd8d8eaa497c3319bc05310e0cb0c5cd8274476d05da259bea815df7ed6135a1bbfa647effc8ca4d21401ed0b6e6f1fb9789bc930d36dfb1099c115df12
-MISC ChangeLog 22735 SHA256 1a7db3324188830d5f9911f0262e0607cc61335542a926927d76b8a9ddc50811 SHA512 865215a4c089c82ce256c80e009465f64189fe2c4dc767c38e4a59d4b8b3b880a4c597db80530c488f2675343a8fb6d665945227effe552d6cf68be26c6d408b WHIRLPOOL f9d081bd6e4e7599f6e1e757b20f6043f5f549921294c2b3c6d25cb08337ae6bf6e2c91b64a96aaf02a6c01545f9bddd4a24fda0864f6fac1eba97eace0f74ca
+MISC ChangeLog 22838 SHA256 8d675fe06b67202dfecd4464f755f8a214ac82e0d1f4e18cc3b19a07212e51b5 SHA512 28e6ed74f7322dd950d7bac446477c084092e2626ff05f4338229e23c0a3b95e388e822b52f8f876adf571109950edea428d9d8c2bd1dd3bd0a743e790ce0a91 WHIRLPOOL 1d7d200cbe663b35cde9cf1ce965bbca6b16cbbacddb6f80e527ef5dec6c0d65e515745d5cbd32db541d860d734ebcf80481f75cd3674582dab8dbcaabe11c00
 MISC metadata.xml 225 SHA256 5ac870ed26b6e1b9996db97cc5d4b674d914ff9730a7da68d45f34273ae15b7b SHA512 eff5b76a5fbd985b1fe83542cd677f1c36baf0e2cd45360b85fe68b10d62b388cc7ef81fcfe773f007779fe46bb0059a5433c1ca4c9cce7792495a4258d9221c WHIRLPOOL 689070d9e59d0f3b14fdb41cdbccb35632de096857aab39c3bd34b18c4574be8edda1b661ad12e278127f7e1317334cb0fb5dc612fa7e22d7f65c2a8559fa1a8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJS0EmNXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRBNzE1M0M4QzQxMzM4REREMjMzQjg4NUZE
-REY5NzFGMTE4RUVBNUU2AAoJEN35cfEY7qXmor4P/1lHDzd/uiAHvt3k/GKM8wz6
-1/yylyBEDEJzraDf/l7OxA5byzUXYLgu8zPvzdkx53hMBsB+RGPS4TAG7F4jnDen
-Gu1PjONP6eG8taIPhq/49AgT/SR6SLTr5DCVna3CLon4Di6yeGCMjeVZtVEjjfGI
-z0GoSIgu70XWH8o/1raQD15Po0Cyunse4rZO6DZAqrve0pgzy/voYUGgHs8J6pie
-r+wCoEVxqggqC9DyGVoD+aus5XKIaOmBefp8QtVKw8gktdYpHEjpJFxeg0seStcO
-g0EtY2KfygsBIbahMNWZDkaNoWGCxs2q2VyX8w6pcoD7Tqk2Dd9+aJdUl1mOwtoU
-sVz/UphnG2tfYryKqMO4LOu7fpoiOJLnFcZXgSxrQEx0upr4u3GWcGglp/3zWx8e
-3ZkNCgPB4gEUGAf7OEBbXHGxRvtvZjOzPhz4NbTl5KNE9YT7XxTGL4M8uGacNr/5
-9l/yE0qgXt8Gwem0ZQVfJpb+93vzC/Vm0tHlQfDeZ37TasNjGHk5zYDd/MaiKdBS
-sjeTeW/w5LuNaCCqm78iwlQHeBD49Ad8h8wW7gMAd/1UjZuSxFMsV0Io4gMxWCRg
-n+UT52g5nynyrNiGEBXTHnqSelIOJOkwOn9snlwSBsbbSXwzQPEVvh7mKFT8/5PW
-Z1bSO247Q2dquD57oKt4
-=7nYr
+iQIcBAEBCAAGBQJS1lrRAAoJELp701BxlEWfu0kQAI3bkEUubT78CLE608N8Ip4v
+lVxJJYrDXgNy2LInS9SfDajJvhOpo8bgt20XCHVJSOKhnCOeXRcSvLmHJMn9K5qy
+Ca3ALjw0pmirv6JGwIO14vkUtTMVCf02RGz/IPOmiEfl/5aPsJ6XwIWCTLNQ/wSJ
+/Ta4rkMhgqnkr5TcwEMsDqiLcqmpQtlCUOVqebNcoYlPlcQlg0HZcUXn9uGDEhuX
+liDt8K1hg745Ch+tcL95SXxAlFOj+flZWgQ5YwDIzGLeM/PD2ts46lr/hNfNyJhc
+eoyqgd/4alxjUXs2d/C0ak9H08PKe73zF2T1cYCDUQUJ7wKyAxcjZbcNKz+UBJHv
+YuEChW/19/2huNAk0rPh7Zk6PQyd1iNxArYAipZJ46hn5Xuwuumr9+tU9nsQOyuT
+Rqh9qUOTH3djxg3ZiIlyPx4euvH9C9ME9pDHIdYt12OwRojThNZNiHCOcjD68w7I
+RkyroqazuTTnFWU22vhOJ2cRR2EIk99hg32zFLPALpfIDhOoQ9CWWZoMk0Fb4iLM
+3R9OBmzwTc20ChBdAzS9n5G5+/k87PpJrpxa/2o+epPaYxIuktF3CjGspzIkkAqF
+uaH7SXNFlgofoWmY5lFj/ytD7Avv6qcG4Qe8u78mCR7ef8Y+zNhBJzEmGb3XvWr+
+H3Coda0iJe5xZpXkK6uX
+=Tzwr
 -----END PGP SIGNATURE-----
